[package]
name = "telebroom"
version = "0.1.3"
description = "TeleBroom: Telegram Group Message Deleter"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "telebroom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
grammers-client = { version = "0.9.0", features = ["fs", "proxy"] }
grammers-session = { version = "0.9.0", features = ["serde"] }
grammers-mtsender = { version = "0.9.0", features = ["proxy"] }
tokio = { version = "1.52.1", features = ["full"] }
open = "5.3.4"
base64 = "0.22.1"
sysproxy = "0.3.0"
tauri-plugin-single-instance = "2.4.1"
reqwest = { version = "0.13.3", features = ["socks", "json"] }
